--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,12 @@
         "psr-4": {
             "Spork\\Maintenance\\": "src/"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Spork\\Maintenance\\MaintenanceServiceProvider"
+            ]
+        }
     }
 }
