Update composer dependencies, and reform the json blob. Also add .github workflow, and funding option. Also add phpunit."

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
             "email": "5355937+austinkregel@users.noreply.github.com"
         }
     ],
-    "require": {},
+    "require": {
+        "php": ">=8.0"
+    },
     "autoload": {
         "psr-4": {
             "Spork\\Maintenance\\": "src/"
@@ -21,5 +23,23 @@
                 "Spork\\Maintenance\\MaintenanceServiceProvider"
             ]
         }
-    }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Spork\\Maintenance\\Tests\\": "tests"
+        }
+    },
+    "require-dev": {
+        "orchestra/testbench": "^7.0"
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit",
+        "format": "vendor/bin/pint"
+    },
+    "homepage": "https://github.com/spork-app/greenhouse",
+    "keywords": [
+        "spork-plugins"
+    ],
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
